Project page spacing fix

--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -379,11 +379,6 @@
         .projectInfo li {
             padding-top: 1rem;
         }
-
-        .projectInfo li:first-child {
-            padding: 0;
-        }
-
     }
 }
 
